Removing incesary page of formsubmit , once you submit

--- a/contactanos.html
+++ b/contactanos.html
@@ -47,6 +47,7 @@
 						<input type="email" placeholder="Correo" name="email" maxlength="50" required>
 						<textarea  placeholder="Mensaje" name="message" maxlength="400"></textarea>
 						<input class="boton" type="submit" value="Enviar">
+                        <input type="hidden" name="_next" value="http://suisjeprueba.ezyro.com/">
 					</form>
             </div>
         </section>
