Removing the capcha from formsubmit

--- a/contactanos.html
+++ b/contactanos.html
@@ -48,6 +48,7 @@
 						<textarea  placeholder="Mensaje" name="message" maxlength="400"></textarea>
 						<input class="boton" type="submit" value="Enviar">
                         <input type="hidden" name="_next" value="http://suisjeprueba.ezyro.com/">
+                        <input type="hidden" name="_captcha" value="false">
 					</form>
             </div>
         </section>
