agrege una modificacion en la linea 67

--- a/contactanos.html
+++ b/contactanos.html
@@ -64,7 +64,7 @@
 
 
 						<input type="submit" id="submit_button" value="Enviar">
-                        <input type="hidden" name="_next" value="http://suisjeprueba.ezyro.com/">
+                        <input type="hidden" name="_next" value="https://jeftounz.github.io/formulario_contacto_equiproin/">
                         <input type="hidden" name="_captcha" value="false">
 					</form>
             </div>
