Agregue el id en el telefono del formulario

--- a/contactanos.html
+++ b/contactanos.html
@@ -44,7 +44,7 @@
                     <form  action="https://formsubmit.co/srjesusc@gmail.com" method="POST" class="formulario" onsubmit="return validate()">	
 						<input type="text" placeholder="Nombre" name="name" maxlength="20" required>
                         <label for="phone" id="tlf" name="telefono" ></label>
-                        <input type="tel" placeholder="Telefono" name="phone"  maxlength="14"  required>
+                        <input type="tel" placeholder="Telefono" name="phone" id="phone" maxlength="14"  required>
 						<input type="email" placeholder="Correo" name="email" maxlength="50" required>
 						<textarea  placeholder="Mensaje" name="message" maxlength="400" required></textarea>
                         <label for="textBox">Porfavor introduzca las letras de la imagen</label>
